--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h1> Ankita Thakkar</h1>
         <p>
           <em>
-            M.S Student<br>
-            Computer Science and Engineering <br>
-            <a href="http://unr.edu">University of Nevada, Reno</a> <br>
+            Subject Matter Expert<br>
+            LEAD School <br>
+            
           </em>
         </p>
         <p> <i>Experienced Teaching Professional with a demonstrated history of working in the higher education industry for 7+ years. Skilled in C++, Java, Python, HTML, CSS, JavaScript, Jquery, Ajax, Flask,MongoDB, Matlab and Project Management.
